<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EarthquakeOptionsDialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:paddingTop="8sp"
            android:paddingBottom="8sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/start_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/start_date_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:paddingTop="8sp"
            android:paddingBottom="8sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/end_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/end_date_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:paddingTop="8sp"
            android:paddingBottom="8sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/min_mag_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_mag"
                android:textSize="22sp" />

            <Spinner
                android:id="@+id/min_mag_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:entries="@array/magnitudes"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:paddingTop="8sp"
            android:paddingBottom="8sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/max_mag_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_mag"
                android:textSize="22sp" />

            <Spinner
                android:id="@+id/max_mag_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:entries="@array/magnitudes"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:paddingTop="8sp"
            android:paddingBottom="8sp"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/cancel"
                android:textSize="22sp" />

            <Button
                android:id="@+id/ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/ok"
                android:textSize="22sp" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>