<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EarthquakeOptionsDialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:gravity="center_horizontal"
            android:text="@string/earthquake_trend_options"
            android:textSize="26sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/separator" />

        <LinearLayout
            android:id="@+id/year_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/year_text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:padding="8sp"
                android:textSize="22sp"
                android:text="@string/start_year"/>

            <EditText
                android:id="@+id/year_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16sp"
                android:padding="8sp"
                android:textSize="22sp"
                android:text=""
                android:ems="4"
                android:maxEms="4"
                android:maxLength="4"
                android:inputType="number"
                android:singleLine="true"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:orientation="horizontal"
            android:paddingBottom="8sp"
            android:paddingTop="8sp">

            <TextView
                android:id="@+id/min_mag_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_mag"
                android:textSize="22sp" />

            <Spinner
                android:id="@+id/min_mag_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/magnitudes"
                android:gravity="end"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:orientation="horizontal"
            android:paddingBottom="8sp"
            android:paddingTop="8sp">

            <TextView
                android:id="@+id/max_mag_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_mag"
                android:textSize="22sp" />

            <Spinner
                android:id="@+id/max_mag_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/magnitudes"
                android:gravity="end"
                android:textSize="22sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/separator" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:gravity="right"
            android:orientation="horizontal"
            android:paddingBottom="8sp"
            android:paddingTop="8sp">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/cancel"
                android:textSize="22sp" />

            <Button
                android:id="@+id/ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/ok"
                android:textSize="22sp" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>